# jadnet-dns-proxy

./: Dockerfile  README.md  TESTING.md  compose.yaml  proxy.py  pyproject.toml  requirements.txt
.github/workflows/: docker-build-push.yml  release-on-main.yml  test.yml
src/jadnet_dns_proxy/: __init__.py  __main__.py  bootstrap.py  cache.py  config.py  global_metrics.py  protocol.py  resolver.py  server.py  transport.py  upstream_manager.py
tests/: test_bootstrap.py  test_cache.py  test_config.py  test_custom_dns_backend.py  test_custom_dns_transport.py  test_global_metrics.py  test_protocol.py  test_resolver.py  test_server.py  test_transport.py  test_upstream_manager.py
