[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jadnet-dns-proxy"
version = "0.1.3"
description = "A high-performance DNS-over-HTTPS proxy"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "dnslib==0.9.23",
    "httpx[http2]==0.24.1",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
]

[project.scripts]
jadnet-dns-proxy = "jadnet_dns_proxy.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=jadnet_dns_proxy --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["src/jadnet_dns_proxy"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
